update gradle build

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,7 @@
             "program": "lib/main.dart",
             "type": "dart",
             "args": [
+                "--profile",
                 "--flavor",
                 "development"
             ]
